// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MonthDateYearField component Props containerStyle 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
      },
      Object {
        "marginVertical": 20,
      },
    ]
  }
>
  <Memo(ForwardRef)
    editable={true}
    onBlur={[Function]}
    onChangeText={[Function]}
    onSubmitEditing={[Function]}
    placeholder="Month"
    value=""
  />
  <Memo(ForwardRef)
    editable={true}
    onBlur={[Function]}
    onChangeText={[Function]}
    onSubmitEditing={[Function]}
    placeholder="Date"
    value=""
  />
  <Memo(ForwardRef)
    editable={true}
    maxLength={4}
    onBlur={[Function]}
    onChangeText={[Function]}
    onSubmitEditing={[Function]}
    placeholder="Year"
    returnKeyType="done"
    value=""
  />
</View>
`;

exports[`MonthDateYearField component Props defaultValue 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
      },
      undefined,
    ]
  }
>
  <Memo(ForwardRef)
    editable={true}
    onBlur={[Function]}
    onChangeText={[Function]}
    onSubmitEditing={[Function]}
    placeholder="Month"
    value="3"
  />
  <Memo(ForwardRef)
    editable={true}
    onBlur={[Function]}
    onChangeText={[Function]}
    onSubmitEditing={[Function]}
    placeholder="Date"
    value="25"
  />
  <Memo(ForwardRef)
    editable={true}
    maxLength={4}
    onBlur={[Function]}
    onChangeText={[Function]}
    onSubmitEditing={[Function]}
    placeholder="Year"
    returnKeyType="done"
    value="2021"
  />
</View>
`;

exports[`MonthDateYearField component Props editable 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
      },
      undefined,
    ]
  }
>
  <Memo(ForwardRef)
    editable={false}
    onBlur={[Function]}
    onChangeText={[Function]}
    onSubmitEditing={[Function]}
    placeholder="Month"
    value=""
  />
  <Memo(ForwardRef)
    editable={false}
    onBlur={[Function]}
    onChangeText={[Function]}
    onSubmitEditing={[Function]}
    placeholder="Date"
    value=""
  />
  <Memo(ForwardRef)
    editable={false}
    maxLength={4}
    onBlur={[Function]}
    onChangeText={[Function]}
    onSubmitEditing={[Function]}
    placeholder="Year"
    returnKeyType="done"
    value=""
  />
</View>
`;

exports[`MonthDateYearField component Props handleErrors 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
      },
      undefined,
    ]
  }
>
  <Memo(ForwardRef)
    editable={true}
    onBlur={[Function]}
    onChangeText={[Function]}
    onSubmitEditing={[Function]}
    placeholder="Month"
    value=""
  />
  <Memo(ForwardRef)
    editable={true}
    onBlur={[Function]}
    onChangeText={[Function]}
    onSubmitEditing={[Function]}
    placeholder="Date"
    value=""
  />
  <Memo(ForwardRef)
    editable={true}
    maxLength={4}
    onBlur={[Function]}
    onChangeText={[Function]}
    onSubmitEditing={[Function]}
    placeholder="Year"
    returnKeyType="done"
    value=""
  />
</View>
`;

exports[`MonthDateYearField component Props labelDate 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
      },
      undefined,
    ]
  }
>
  <Memo(ForwardRef)
    editable={true}
    onBlur={[Function]}
    onChangeText={[Function]}
    onSubmitEditing={[Function]}
    placeholder="Month"
    value=""
  />
  <Memo(ForwardRef)
    editable={true}
    onBlur={[Function]}
    onChangeText={[Function]}
    onSubmitEditing={[Function]}
    placeholder="Input date"
    value=""
  />
  <Memo(ForwardRef)
    editable={true}
    maxLength={4}
    onBlur={[Function]}
    onChangeText={[Function]}
    onSubmitEditing={[Function]}
    placeholder="Year"
    returnKeyType="done"
    value=""
  />
</View>
`;

exports[`MonthDateYearField component Props labelMonth 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
      },
      undefined,
    ]
  }
>
  <Memo(ForwardRef)
    editable={true}
    onBlur={[Function]}
    onChangeText={[Function]}
    onSubmitEditing={[Function]}
    placeholder="Input month"
    value=""
  />
  <Memo(ForwardRef)
    editable={true}
    onBlur={[Function]}
    onChangeText={[Function]}
    onSubmitEditing={[Function]}
    placeholder="Date"
    value=""
  />
  <Memo(ForwardRef)
    editable={true}
    maxLength={4}
    onBlur={[Function]}
    onChangeText={[Function]}
    onSubmitEditing={[Function]}
    placeholder="Year"
    returnKeyType="done"
    value=""
  />
</View>
`;

exports[`MonthDateYearField component Props labelYear 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
      },
      undefined,
    ]
  }
>
  <Memo(ForwardRef)
    editable={true}
    onBlur={[Function]}
    onChangeText={[Function]}
    onSubmitEditing={[Function]}
    placeholder="Month"
    value=""
  />
  <Memo(ForwardRef)
    editable={true}
    onBlur={[Function]}
    onChangeText={[Function]}
    onSubmitEditing={[Function]}
    placeholder="Date"
    value=""
  />
  <Memo(ForwardRef)
    editable={true}
    maxLength={4}
    onBlur={[Function]}
    onChangeText={[Function]}
    onSubmitEditing={[Function]}
    placeholder="Input year"
    returnKeyType="done"
    value=""
  />
</View>
`;

exports[`MonthDateYearField component Props maximumDate 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
      },
      undefined,
    ]
  }
>
  <Memo(ForwardRef)
    editable={true}
    onBlur={[Function]}
    onChangeText={[Function]}
    onSubmitEditing={[Function]}
    placeholder="Month"
    value=""
  />
  <Memo(ForwardRef)
    editable={true}
    onBlur={[Function]}
    onChangeText={[Function]}
    onSubmitEditing={[Function]}
    placeholder="Date"
    value=""
  />
  <Memo(ForwardRef)
    editable={true}
    maxLength={4}
    onBlur={[Function]}
    onChangeText={[Function]}
    onSubmitEditing={[Function]}
    placeholder="Year"
    returnKeyType="done"
    value=""
  />
</View>
`;

exports[`MonthDateYearField component Props minimumDate 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
      },
      undefined,
    ]
  }
>
  <Memo(ForwardRef)
    editable={true}
    onBlur={[Function]}
    onChangeText={[Function]}
    onSubmitEditing={[Function]}
    placeholder="Month"
    value=""
  />
  <Memo(ForwardRef)
    editable={true}
    onBlur={[Function]}
    onChangeText={[Function]}
    onSubmitEditing={[Function]}
    placeholder="Date"
    value=""
  />
  <Memo(ForwardRef)
    editable={true}
    maxLength={4}
    onBlur={[Function]}
    onChangeText={[Function]}
    onSubmitEditing={[Function]}
    placeholder="Year"
    returnKeyType="done"
    value=""
  />
</View>
`;

exports[`MonthDateYearField component Props onSubmit 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
      },
      undefined,
    ]
  }
>
  <Memo(ForwardRef)
    editable={true}
    onBlur={[Function]}
    onChangeText={[Function]}
    onSubmitEditing={[Function]}
    placeholder="Month"
    value=""
  />
  <Memo(ForwardRef)
    editable={true}
    onBlur={[Function]}
    onChangeText={[Function]}
    onSubmitEditing={[Function]}
    placeholder="Date"
    value=""
  />
  <Memo(ForwardRef)
    editable={true}
    maxLength={4}
    onBlur={[Function]}
    onChangeText={[Function]}
    onSubmitEditing={[Function]}
    placeholder="Year"
    returnKeyType="done"
    value=""
  />
</View>
`;

exports[`MonthDateYearField component Props placeholderTextColor 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
      },
      undefined,
    ]
  }
>
  <Memo(ForwardRef)
    editable={true}
    onBlur={[Function]}
    onChangeText={[Function]}
    onSubmitEditing={[Function]}
    placeholder="Month"
    placeholderTextColor="#000000"
    value=""
  />
  <Memo(ForwardRef)
    editable={true}
    onBlur={[Function]}
    onChangeText={[Function]}
    onSubmitEditing={[Function]}
    placeholder="Date"
    placeholderTextColor="#000000"
    value=""
  />
  <Memo(ForwardRef)
    editable={true}
    maxLength={4}
    onBlur={[Function]}
    onChangeText={[Function]}
    onSubmitEditing={[Function]}
    placeholder="Year"
    placeholderTextColor="#000000"
    returnKeyType="done"
    value=""
  />
</View>
`;

exports[`MonthDateYearField component Props styleInput 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
      },
      undefined,
    ]
  }
>
  <Memo(ForwardRef)
    editable={true}
    onBlur={[Function]}
    onChangeText={[Function]}
    onSubmitEditing={[Function]}
    placeholder="Month"
    style={
      Object {
        "fontSize": 15,
      }
    }
    value=""
  />
  <Memo(ForwardRef)
    editable={true}
    onBlur={[Function]}
    onChangeText={[Function]}
    onSubmitEditing={[Function]}
    placeholder="Date"
    style={
      Object {
        "fontSize": 15,
      }
    }
    value=""
  />
  <Memo(ForwardRef)
    editable={true}
    maxLength={4}
    onBlur={[Function]}
    onChangeText={[Function]}
    onSubmitEditing={[Function]}
    placeholder="Year"
    returnKeyType="done"
    style={
      Object {
        "fontSize": 15,
      }
    }
    value=""
  />
</View>
`;

exports[`MonthDateYearField component Props testID 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
      },
      undefined,
    ]
  }
  testID="date_input"
>
  <Memo(ForwardRef)
    editable={true}
    onBlur={[Function]}
    onChangeText={[Function]}
    onSubmitEditing={[Function]}
    placeholder="Month"
    value=""
  />
  <Memo(ForwardRef)
    editable={true}
    onBlur={[Function]}
    onChangeText={[Function]}
    onSubmitEditing={[Function]}
    placeholder="Date"
    value=""
  />
  <Memo(ForwardRef)
    editable={true}
    maxLength={4}
    onBlur={[Function]}
    onChangeText={[Function]}
    onSubmitEditing={[Function]}
    placeholder="Year"
    returnKeyType="done"
    value=""
  />
</View>
`;

exports[`MonthDateYearField component should match snapshot 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
      },
      undefined,
    ]
  }
>
  <Memo(ForwardRef)
    editable={true}
    onBlur={[Function]}
    onChangeText={[Function]}
    onSubmitEditing={[Function]}
    placeholder="Month"
    value=""
  />
  <Memo(ForwardRef)
    editable={true}
    onBlur={[Function]}
    onChangeText={[Function]}
    onSubmitEditing={[Function]}
    placeholder="Date"
    value=""
  />
  <Memo(ForwardRef)
    editable={true}
    maxLength={4}
    onBlur={[Function]}
    onChangeText={[Function]}
    onSubmitEditing={[Function]}
    placeholder="Year"
    returnKeyType="done"
    value=""
  />
</View>
`;
